Update VOCUS 2023-06-05 patch

--- a/_posts/2020-04-07-VOCUS-安樂死或是-廢死-文字+音檔.html
+++ b/_posts/2020-04-07-VOCUS-安樂死或是-廢死-文字+音檔.html
@@ -8,8 +8,7 @@ tags: blog
 author: 王大明
 ---
 
-<div class="draft-block draft--p left"></div>
-<div><h3><a href="https://anchor.fm/wang-da-ming/episodes/20200409-ecjdkn"></div>
+<div><h3><a href="https://anchor.fm/wang-da-ming/episodes/20200409-ecjdkn">20200409安樂死或是，廢死 by 王大明</a></h3></div>
 <div class="draft-block draft--p left">今天講安樂死跟廢死。<br>兩個主題放在一起講，好像很奇怪？</div>
 <div class="draft-block draft--p left">這要從一個2008年的故事說起。那時候我是一個法律研究生，正在上憲法課，授課老師叫李念祖。<br>他在業界比較有名，是台灣最大的法律事務所，理律，的合夥人。外界要稱呼他李律師、或李所長。<br>我有榮幸上過他的憲法課，可以稱他「念祖老師」（笑）</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=tcWi38FEHBM" class="video-screen" src="https://www.youtube.com/embed/tcWi38FEHBM" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
@@ -22,7 +21,6 @@ author: 王大明
 <div class="draft-block draft--p left">是嗎？</div>
 <div class="draft-block draft--p left">2020年4月2日的新聞，死刑犯翁仁賢被執行。<br><a href="https://tw.appledaily.com/local/20200401/ANOEZEM63WW6QNIKOOMIKZBRHA/" target="_blank" class="draft--a">台灣目前還有39名死囚待執行</a>。聽說法務部選擇翁仁賢的理由，就是他「<a href="https://udn.com/news/story/121048/4463115" target="_blank" class="draft--a">一心求死</a>」。<br><br>「<span style="font-weight: bold; ">他被判了死刑，又想死，啊就給他死啊。</span>」<br>我彷彿看到2008年的自己，會這樣告訴我。</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=covo7K1vmNs" class="video-screen" src="https://www.youtube.com/embed/covo7K1vmNs" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">現在是2020年，我的想法有一些改變，甚至開始有一些像當時的念祖老師了。</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">我現在會想：<br>「如果台灣已經通過了積極安樂死的法案，我們可以讓翁仁賢有個機會自殺？」</div></div>
 <div class="draft-block draft--p left">我始終覺得，自殺也是需要勇氣的。某些案例會告訴你：<span style="text-decoration: underline; ">囚犯關在監獄裡，用床單纏住脖子，就可以自殺了。</span>但是，這不是每個人都做得到的。</div>
@@ -49,7 +47,6 @@ author: 王大明
 <div class="draft-block draft--p left">聖經分成舊約跟新約，<a href="http://www.pastorlau.org/pages/special/deathpenalty.html" target="_blank" class="draft--a">舊約的上帝是不可能廢除死刑的</a>（笑）</div>
 <blockquote class="draft-block draft--blockquote">新約確實寬恕一些，愛你的仇敵、不要以眼還眼，耶穌廢止摩西律法的刑罰，所以包含死刑也被廢止了。<br>如果你堅持要執行死刑，耶穌會告訴你，<span style="font-weight: bold; ">他願意代替全人類死在十字架上，所以之後所有死刑都該被廢止</span>。</blockquote>
 <h3 class="draft-block draft--h3" name="header-3pp0o">好，這是某一派基督徒的說法。<br>我只是引述一下，不代表個人立場（笑）</h3>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">就國際上來講，廢除死刑的想法，是國家沒有權利剝奪人的生命。當然大部分臺灣人的想法應該是，<br><span style="text-decoration: underline; font-weight: bold; ">啊這就是個壞人，他殺了我的家人，被判死罪。<br>面對這個壞人，你政府不讓我自己動手殺他，又不幫我殺。</span></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">你說要保障死刑犯的人權，我們受害者家屬，是沒人權的嗎？</div></div>
 <div class="draft-block draft--p left">關鍵字「<a href="https://www.google.com/search?q=%E5%B0%8F%E7%87%88%E6%B3%A1+%E4%BA%BA%E6%AC%8A&amp;oq=%E5%B0%8F%E7%87%88%E6%B3%A1+%E4%BA%BA%E6%AC%8A&amp;aqs=chrome..69i57.234j0j1&amp;sourceid=chrome&amp;ie=UTF-8" target="_blank" class="draft--a">小燈泡 人權</a>」</div>
@@ -60,7 +57,6 @@ author: 王大明
 <div class="draft-block draft--p left"><br>這就是為什麼廢死聯盟一直強調<span style="font-weight: bold; ">「死刑是廉價的正義」。<br>這裡的廉價是指政府。政府常常用死刑，當作解決問題的唯一手段。</span><br><br>至於這個社會為什麼會出現連續殺人犯？教育能不能改革？這些犯人有沒有得到足夠的社會資源？如果受刑人可以重返社會，社會對「更生人」是願意給他們機會的嗎？</div>
 <div class="draft-block draft--p left">好奇的話，關鍵字「<a href="https://www.google.com/search?q=%E5%8C%97%E6%AD%90+%E7%9B%A3%E7%8D%84&amp;oq=%E5%8C%97%E6%AD%90+%E7%9B%A3%E7%8D%84&amp;aqs=chrome..69i57.823j0j1&amp;sourceid=chrome&amp;ie=UTF-8" target="_blank" class="draft--a">北歐 監獄</a>」</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=EGFgYjA2uAk" class="video-screen" src="https://www.youtube.com/embed/EGFgYjA2uAk" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">人家是怎麼看待更生人的，我們呢？我剛剛推薦了什麼關鍵字？「<a href="https://www.google.com/search?q=%E7%9B%A3%E7%8D%84%E6%88%91%E4%BE%86%E6%88%91%E8%A6%8B%E6%88%91XX&amp;oq=%E7%9B%A3%E7%8D%84%E6%88%91%E4%BE%86%E6%88%91%E8%A6%8B%E6%88%91XX&amp;aqs=chrome..69i57.807j0j9&amp;sourceid=chrome&amp;ie=UTF-8" target="_blank" class="draft--a">監獄我來我見我XX</a>」</div>
 <div class="draft-block draft--p left">我們的政府，這十年來，對「預防死刑」投注的資源仍然不足，做得太少。<br>所以只好偶爾就執行一下死刑，轉移焦點。<br><br>這裡我推薦一部YouTube影片：<a href="https://www.youtube.com/watch?v=cdHqrIce_bU" target="_blank" class="draft--a">【博恩夜夜秀】欸！死刑執行</a><br>上傳時間：2020年1月21日，觀看次數達166萬次。</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=cdHqrIce_bU" class="video-screen" src="https://www.youtube.com/embed/cdHqrIce_bU" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
@@ -101,7 +97,6 @@ author: 王大明
 <div class="draft-block draft--p left">當然沒那麼粗糙啦。</div>
 <div class="draft-block draft--p left">在前幾年，我聽過推動安寧緩和醫療的黃勝堅醫師，曾有句話「<span style="font-weight: bold; ">若要好好走，別打119</span>」。對照到今天的法令。對於台灣推動安樂死立法，我是樂觀的。</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=kdMLT04BhKs" class="video-screen" src="https://www.youtube.com/embed/kdMLT04BhKs" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">希望在我的有生之年，就可以看到台灣有「積極安樂死」的法規。</div></div>
 <h2 class="draft-block draft--h2" name="header-cmg0b">還記得英國人林克穎的引渡嗎？</h2>
 <div class="draft-block draft--p left">最後，如果還有些時間，我們來談一個逃亡的殺人犯，叫林克穎，他是一個英國人。2010年在台灣酒駕撞死送報生，遭台灣法院判刑四年，結果在入獄前潛逃回英國。</div>
@@ -115,10 +110,8 @@ author: 王大明
 <div class="draft-block draft--p left">民事部分，我國法院判林克穎應賠家屬908萬元，效力也獲英國法院採認，但因林克穎脫產，名下無財物，無從執行。</div>
 <div class="draft-block draft--p left">至今，受害家屬仍得不到犯罪者的賠償，酒駕撞死人的林克穎，逍遙法外。可能林克穎在歐洲有財產，但英國脫歐了，所以，<a href="https://forum.ettoday.net/news/1464788" target="_blank" class="draft--a">英國法院也無法查扣林克穎在歐洲的財產</a>。</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=C3sAbChU9cE" class="video-screen" src="https://www.youtube.com/embed/C3sAbChU9cE" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-bv40v">為什麼台灣要跟隨國際潮流廢除死刑？</h2>
 <div class="draft-block draft--p left">所以，如果國際的潮流是廢除死刑，我們說「<a href="http://www.humanrights.moj.gov.tw/cp-1088-32063-491c6-200.html" target="_blank" class="draft--a">兩人權公約</a>」，而台灣堅持要維持死刑。十年後、二十年後，在國際上是會產生後遺症的。</div>
 <div class="draft-block draft--p left">或許我看得懂政府在做什麼。<br>但我會期待這個政府，跟社會大眾有更多溝通，法律並不是關上門來自己蠻幹就可以了。</div>
 <div class="draft-block draft--p left">最後，雖然我不是那麼樂觀：<br>祝福在李念祖老師的有生之年，就可以看到政府做好足夠的配套措施，讓台灣社會對廢死達成共識。</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=5ap9S1xhpbk" class="video-screen" src="https://www.youtube.com/embed/5ap9S1xhpbk" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
