--- a/_posts/2020-04-09-VOCUS-網路盜圖怎麼提告.html
+++ b/_posts/2020-04-09-VOCUS-網路盜圖怎麼提告.html
@@ -24,9 +24,7 @@ author: 王大明
   <li class="draft-block draft--li">還是一定要去位置有些偏僻在快速道路高架橋下面的「<span style="font-weight: bold; ">保二總隊</span>」？<br><br>這個問題，如果你去搜尋，<a href="https://www.facebook.com/StAChat/posts/196520144418308/" target="_blank" class="draft--a">檢察官有一個粉絲頁「法律快易通：檢仔聊天室」會告訴你：</a></li>
 </ul>
 <blockquote class="draft-block draft--blockquote">你當然可以直接去你家附近派出所報案、提出告訴，完全沒有問題，不一定要找遠的要命的保二總隊啦。報案時，要警察給你三聯單確保他真的有受理，並製作告訴筆錄(不能只是報案喔)。<br><br>如果警察跟你說不受理這類案件，要你去找別的機關，請直接轉頭回家，打開電腦上網，搜尋 #各分局的督察組，檢舉他違法吃案，千萬給他不要客氣!!!!!!</blockquote>
-<div><h3><a href="https://www.facebook.com/StAChat/posts/196520144418308/"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left">這篇fb貼文，刊登在2018年1月22日。</div>
+<div><h3><a href="https://www.facebook.com/StAChat/posts/196520144418308/">這篇fb貼文，刊登在2018年1月22日。</a></h3></div>
 <h3 class="draft-block draft--h3" name="header-acp6g">哇！檢察官說報案可以找派出所耶，一定是正確答案吧？</h3>
 <div class="draft-block draft--p left">是嗎？<br><br>如果你再搜尋一下，可能會看到一個2019年1月30日的新聞，標題：<br><a href="https://news.ltn.com.tw/news/society/breakingnews/2687177" target="_blank" class="draft--a">被盜照辣模：不是第一次被吃案！</a><br>新聞內容是：</div>
 <blockquote class="draft-block draft--blockquote">有一個黃小姐，照片疑似遭應召站盜用。她說不是第一次遇到吃案了，他之前去住家附近的台南市警四分局派出所報案，沒想到卻被老警察訕笑吃案，讓她感覺很不好。<br>這次照片疑似遭應召業者盜用，她找了比較大間的警察局報案，以為大派出所不會馬虎，結果還是被吃案，覺得很無助。<br>她就是不知道怎辦才找警察，也很懷疑難道只要在網路上的案子警方都如此無能嗎？</blockquote>
@@ -49,12 +47,9 @@ author: 王大明
 <div class="draft-block draft--quotesSpecial center"><div class="content">我還真遇過有人到這個時候才跑去問律師怎麼辦？</div></div>
 <div class="draft-block draft--p left">你覺得律師會時光倒轉嗎？將已經刪除的檔案復原，讓你重新保留證據？<br></div>
 <div class="draft-block draft--p left">說到律師，其實也有律師寫過文章，教學網路盜圖的程序。<br><a href="https://www.facebook.com/LawyerGuitar/posts/1904192032999547/" target="_blank" class="draft--a">fb粉專「律師談吉它」，【網路賣家必看！打擊盜仿兩大手段！】</a></div>
-<div><h3><a href="https://www.facebook.com/LawyerGuitar/posts/1904192032999547/"></div>
-<h3 class="draft-block draft--h3" name="header-2ul3o"></h3>
 <h3 class="draft-block draft--h3" name="header-957l1">另外有一個蒐集證據的辦法，叫「<span style="font-weight: bold; ">比較文件</span>」。</h3>
 <div class="draft-block draft--p left">意思是對方不但盜圖，還盜文。<br>但是有隨意改寫了幾個字。這時候將你的原始文件，跟對方的「創作」，放到word作「比較文件」或「文件比對」 ，對方刪了哪幾段、改了幾個字，完全一清二楚。</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=PckP8TUG_WY" class="video-screen" src="https://www.youtube.com/embed/PckP8TUG_WY" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-fom6j">可以先想一下，求償的金額。</h2>
 <div class="draft-block draft--p left">照片是一張一張計算的。例如我看過<a href="https://ahui3c.com/27279/fuckthief-3" target="_blank" class="draft--a">有部落客分享經驗</a>：<br>兩三張圖片，內容都是手機配件，盜圖後被用在網購平台。</div>
 <ol>
@@ -70,7 +65,5 @@ author: 王大明
 <blockquote class="draft-block draft--blockquote">韓國小雞麵近年在台走紅，不少網拍賣家網路上隨手抓照賣麵，結果錢沒賺到反先挨告。<br>3年來，持有照片著作權的全球威誠國際公司，在全台各地檢署提告近600件，多數都是盜圖小雞麵，引發議論。<br>對此，提告方「全球威誠」公司駁斥外界質疑藉此賺錢說法，強調重點是賣家「自己拍就沒事」。<br>但知名部落客「巴毛」、 律師陳宇安認為，業者開價索取高額和解金不合理，企圖以刑逼民太過份，因此跳出來成立自救會，義務提供賣家法律諮詢和協助處理和解事宜。</blockquote>
 <div class="draft-block draft--p left">從新聞中可以看到，圖片權利方「全球威成」公司求償多半是10萬。<br>這位陳宇安律師，或者稱巴毛律師，她的意見是：</div>
 <blockquote class="draft-block draft--blockquote">我要先強調，網拍用別人的照片是違法的行為，做錯事就要承擔，不是賣家違法我還要幫他們，而是賠償有個限度，1張照片開價5萬、2張10萬，對於不起訴的案件再議、交付審判，讓賣家困在刑事程序裡，藉此要求和解金，太過分了。</blockquote>
-<div><h3><a href="https://www.facebook.com/bamau0113/posts/2179386902150756/"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left">請問你看到這裡，是覺得權利方獅子大開口，還是賣家得到懲罰呢？<br>歡迎回饋想法讓我知道喔🙌</div>
+<div><h3><a href="https://www.facebook.com/bamau0113/posts/2179386902150756/">請問你看到這裡，是覺得權利方獅子大開口，還是賣家得到懲罰呢？</a></h3><br>歡迎回饋想法讓我知道喔🙌</div>
 <div class="draft-block draft--p left">我的ig: <a href="https://www.instagram.com/wang.da.ming/" target="_blank" class="draft--a">wang.da.ming</a></div>
