--- a/_posts/2020-04-21-VOCUS-警察開槍-執法過當.html
+++ b/_posts/2020-04-21-VOCUS-警察開槍-執法過當.html
@@ -8,20 +8,15 @@ tags: blog
 author: 王大明
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block"><iframe title="https://youtu.be/jO3URdHf5aI" class="video-screen" src="https://www.youtube.com/embed/jO3URdHf5aI" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">先分享一個2020年4月8日的新聞「<a href="https://news.ltn.com.tw/news/society/breakingnews/3126342" target="_blank" class="draft--a">屁孩無照逆向拒檢 被攔下繼續囂張辱警</a>」</div>
 <blockquote class="draft-block draft--blockquote">16歲鄭姓少年於4月7日深夜11時，無照駕駛汽車，載著4名友人四處亂晃，行經新北市中和區莒光路，遇到警方臨檢。<br>鄭姓少年硬闖拒檢，最終還是被警方支援網在民享街攔下，這4人被攔下後，不斷對警方叫囂，警方強力將4人制伏後帶回偵訊。<br>後續依照公共危險罪嫌移送少年法庭，鄭姓少年等人，恐怕會吃下最高20萬元的罰款。</blockquote>
 <div class="draft-block draft--quotesSpecial center"><div class="content">後來，「有一些聲音」認為即使民眾犯法，<br>但警方執法明顯有疏失。</div></div>
 <div class="draft-block draft--p left">4月13日，<a href="https://disp.cc/m/163-cgnY" target="_blank" class="draft--a">立法委員邱顯智也在立法院質詢</a>。</div>
 <div class="draft-block draft--p left">對此，4月13日「館長」陳之漢在開直播表示：「我支持司法改革，我支持警方公權力」。<br>「美國警察，嚴厲執法如果嫌犯沒有配合，是會直接開槍，台灣警方作法的確有瑕疵，90%是對的」。</div>
-<div><h3><a href="https://www.setn.com/News.aspx?NewsID=725179"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.setn.com/News.aspx?NewsID=725179">https://www.setn.com/News.aspx?NewsID=725179</a></div>
 <div class="draft-block draft--p left">好，我剛剛「有一些聲音」認為警察執法有疏失。請問是哪一些聲音？</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">是一部分的警察內部、檢察官的聲音。</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">我這邊推薦兩邊文章，標題分別是</div>
 <ul>
   <li class="draft-block draft--li"><a href="https://opinion.udn.com/opinion/story/12626/4488054" target="_blank" class="draft--a">中和警「踹頭」事件：警方的私刑，法治國的死刑？</a></li>
@@ -32,25 +27,19 @@ author: 王大明
   <li class="draft-block draft--li">中和警「踹頭」爭議：私刑或正義？讚聲下的法治國危機 ft.吳忻穎</li>
   <li class="draft-block draft--li">「騙票」是什麼？績效至上與英雄主義如何催化違法執法 ft.吳忻穎</li>
 </ul>
-<div><h3><a href="https://player.soundon.fm/p/cb0cc8a0-7826-48be-b99b-e2b45c992e89/episodes/68fc6cfb-2157-4d95-8185-b02c57630682"></div>
-<div class="draft-block draft--p left"></div>
-<div><h3><a href="https://player.soundon.fm/p/cb0cc8a0-7826-48be-b99b-e2b45c992e89/episodes/2e92f02e-0851-4d5e-9ab3-c266e7b0ff69"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://player.soundon.fm/p/cb0cc8a0-7826-48be-b99b-e2b45c992e89/episodes/68fc6cfb-2157-4d95-8185-b02c57630682">https://player.soundon.fm/p/cb0cc8a0-7826-48be-b99b-e2b45c992e89/episodes/68fc6cfb-2157-4d95-8185-b02c57630682</a></div>
+<div><a href="https://player.soundon.fm/p/cb0cc8a0-7826-48be-b99b-e2b45c992e89/episodes/2e92f02e-0851-4d5e-9ab3-c266e7b0ff69">https://player.soundon.fm/p/cb0cc8a0-7826-48be-b99b-e2b45c992e89/episodes/2e92f02e-0851-4d5e-9ab3-c266e7b0ff69</a></div>
 <h2 class="draft-block draft--h2" name="header-20hc6">他們從檢察官的視角，去分析這件事情。</h2>
 <div class="draft-block draft--p left">資料來源就是警察內部。<br><span style="text-decoration: line-through; ">當然，無論是文字或音檔，都不像館長的影片那麼生動有趣。（笑）</span></div>
 <div class="draft-block draft--p left">我自己不想發表個人評論，但我可以分享一則4月19日的爆料公社新聞：</div>
 <div class="draft-block draft--p left"><a href="https://www.bc3ts.com/post/28503" target="_blank" class="draft--a">太囂張！斗六派出所前持刀棒全武行，警方對空鳴槍嚇阻卻被看沒有！</a></div>
-<div><h3><a href="https://www.bc3ts.com/post/28503"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.bc3ts.com/post/28503">https://www.bc3ts.com/post/28503</a></div>
 <div class="draft-block draft--p left">大意是，4月19日清晨，兩派人馬疑因財務糾紛發生衝突，在派出所前狹路相見。雙方就在派出所前持刀棍鬥毆，還有人穿著防彈背心，警方無法壓制場面，對空開4槍示警。<br><br><a href="https://news.ltn.com.tw/news/society/breakingnews/3139244" target="_blank" class="draft--a">後來有新聞說</a>，警方有出面制止，還有兩名員警受傷了。後來警方逮捕12人，依妨害公務、聚眾鬥毆、傷害等罪嫌移送法辦，檢察官已聲請羈押，另還陸續約談2人。</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">讓警察受傷，襲警！<br>後果應該很嚴重吧？</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">4月17日有一個屏東的新聞，標題「<a href="https://udn.com/news/story/7321/4499848" target="_blank" class="draft--a">咬警案判拘役80天 蔣月惠：該我做的事還是會去做</a>」</div>
 <div class="draft-block draft--p left">蔣月惠是一個無黨籍屏東縣議員，她為什麼要咬警察我就不細講了，<br>大約是屏東縣府徵收民地，涉嫌恐嚇住戶簽署同意書的故事。</div>
 <div class="draft-block draft--p left">一開始，<a href="https://www.facebook.com/100000485772707/posts/2567692356590265/" target="_blank" class="draft--a">是一個網紅溫朗東，揭露了它</a></div>
-<div><h3><a href="https://www.facebook.com/100000485772707/posts/2567692356590265/"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.facebook.com/100000485772707/posts/2567692356590265/">https://www.facebook.com/100000485772707/posts/2567692356590265/</a></div>
 <div class="draft-block draft--p left">後續就有一些相關報導：</div>
 <ul>
   <li class="draft-block draft--li"><a href="https://www.thenewslens.com/article/100207" target="_blank" class="draft--a">從被罵「水準差」到被讚爆的「孤鳥」議員，什麼原因讓她出口「咬人」？</a></li>
@@ -59,7 +48,6 @@ author: 王大明
 <div class="draft-block draft--p left">我這邊只是要描述，警察執法的工作，有許多面向。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">什麼地方都有好人跟壞人，可能是公司、學校、教會、法院、醫院…</span></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">甚至是執法的警察。</div></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-f4ab2">第一個故事</h2>
 <div class="draft-block draft--p left">判決日期2020年1月31日，故事發生在新北。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">被告是六名警察，案由是瀆職。<br>罪名有：剝奪他人行動自由罪、偽造公文書罪。</span></div>
@@ -87,9 +75,7 @@ author: 王大明
 <div class="draft-block draft--p left">警察A判有期徒刑1年4月；<br>警察B判有期徒刑1年8月。<br>（看起來應該是沒有上訴）</div>
 <div class="draft-block draft--p left">本案經檢察官吳忻穎偵查起訴，<span style="text-decoration: line-through; ">所以現在這位吳忻穎已經離職了（誤<br></span>我剛剛有介紹過她的<a href="https://opinion.udn.com/author/articles/1008/2360" target="_blank" class="draft--a">專欄文章</a>和「<a href="https://open.spotify.com/show/6arkRxzNtp6hOPJZIJptU6" target="_blank" class="draft--a">鳴人放送</a>」的音檔節目。<br></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">感謝她願意分享內幕，我們才有故事可以聽（誠懇的）</div></div>
-<h2 class="draft-block draft--h2" name="header-4kkhk"></h2>
-<div><h3><a href="https://www.facebook.com/StATagebuch/"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.facebook.com/StATagebuch/">https://www.facebook.com/StATagebuch/</a></div>
 <h2 class="draft-block draft--h2" name="header-967ao">第二個故事</h2>
 <div class="draft-block draft--p left">判決日期2019年12月31日，故事發生在新竹（二審判決）</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">陳先生是新竹的竹北分局鳳岡派出所警員，他開槍殺了人。</span></div>
