--- a/_posts/2023-05-31-VOCUS-嘴巴講山盟海誓-下回合歹勢歹勢-容易被背刺的桌遊精選.html
+++ b/_posts/2023-05-31-VOCUS-嘴巴講山盟海誓-下回合歹勢歹勢-容易被背刺的桌遊精選.html
@@ -12,7 +12,7 @@ author: Kuan
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/4e48a643-f352-4754-8fc2-7739599ed8de.jpg" data-width="1362" data-height="1371" data-position="center" src="https://images.vocus.cc/4e48a643-f352-4754-8fc2-7739599ed8de.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《我是大老闆》是一款純以交涉為主題的遊戲。</figcaption></div></figure>
 <div class="draft-block draft--p left">而在交涉機制裡，又可以分為「<span style="font-weight: bold; ">有約束力</span>」和「<span style="font-weight: bold; ">無約束力</span>」兩種，同樣拿卡坦島當例子，你不能說好要給對方兩隻羊又反悔，這就是有約束力的交涉機制。但在許多遊戲裡，交涉都是不具約束力的，規則書裡還會特別指出玩家不需要兌現承諾，講講就好，像是《我是大老闆》常常出現：「你選我，我下次選你」這種聽聽就好的空話。</div>
 <div class="draft-block draft--p left">玩這類型的遊戲時，你一定會深刻感受到：「<span style="font-weight: bold; ">對手的嘴，騙人的鬼</span>」。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/1Q18QXlOe6c"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/1Q18QXlOe6c"></iframe></div>
 <div class="draft-block draft--p left">最容易出現的就是背刺或被背刺的體驗，因此不具約束力的交涉機制總是令人又愛又恨（<span style="font-weight: bold; ">或是由愛生恨</span>），今天海景正好（？），我們針對這個機制準備一個常見的遊戲清單。如果上述的機制讓你有興趣的話，就從下面挑一款吧！</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 eaoLEW draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 fOKHtb draft--hr"><hr class="hr__Hr-sc-1afmttx-2 fZvsEE"></pre></div>
 <h2 class="draft-block draft--h2" name="header-48t0l">權力遊戲：二版</h2>
@@ -27,11 +27,9 @@ author: Kuan
 <div class="draft-block draft--p left">你可以讓出部分利益來確保邊界安全，讓你能專心料理主要敵人，也可以割讓領土給侵略者，換取委屈的和平，但獲得利益的那位玩家，並沒有遵守承諾的義務，他唯一要做的，就只是把自己的誠信放在天秤上衡量。</div>
 <div class="draft-block draft--p left">我會說它是一個很血腥的遊戲，因為「背叛」在規則上完全沒有任何壞處，只有玩家自己要背負人際關係的危機而已，背叛一時爽，一直背叛真的可以一直爽，「<span style="font-weight: bold; ">混亂</span>」成就了權力遊戲的特殊體驗，而且，這還非常符合權力遊戲的主旨。</div>
 <div class="draft-block draft--p left">如同影集裡小指頭所說的：「混亂不是深淵，混亂是一把梯子，繼續攀爬才能得到一切。」</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/HDjNcqQs1yM"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/HDjNcqQs1yM"></iframe></div>
 <blockquote class="draft-block draft--blockquote">更多兄弟鬩牆，請移駕到我們的 Podcast 聆聽</blockquote>
-<div><iframe allowfullscreen src="https://open.spotify.com/episode/2z7xUqzbr6Hjxro9WAtDDH?si=019598d5f28a465b"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/episode/2z7xUqzbr6Hjxro9WAtDDH?si=019598d5f28a465b"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 eaoLEW draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 fOKHtb draft--hr"><hr class="hr__Hr-sc-1afmttx-2 fZvsEE"></pre></div>
 <h2 class="draft-block draft--h2" name="header-80dp1">旭日戰魂錄</h2>
 <div class="draft-block draft--p left">旭日的背景來到架空世界的日本，玩家扮演其中一個氏族，透過控制地圖上的不同區域來獲得分數。</div>
@@ -43,9 +41,8 @@ author: Kuan
 <div class="draft-block draft--p left">此後，玩家執行行動時，盟友也會獲得好處，玩家跟盟友的軍隊在同一個區域也不會發生戰鬥。<br><br>但是，遊戲裡有一個動作就叫「背叛」（好直白），作為代價，背叛的人會受到一些懲罰，接著他可以從地圖上移除兩個軍隊。</div>
 <div class="draft-block draft--p left">因為結盟雙方獲得的好處是具有約束力的，旭日並不是全然鼓勵玩家背叛，而是鼓勵玩家在「正確時機」捅隊友一刀，尤其是最後一回合利益收盡的時候。</div>
 <blockquote class="draft-block draft--blockquote">更多愛恨情仇，請移駕到我們的 Podcast 和 YouTube 欣賞</blockquote>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/8LYzBrqfF5E"></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://open.spotify.com/episode/6pwcw6jLrCeQeGARGU5tMI?si=8c1bfb029d204211"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/8LYzBrqfF5E"></iframe></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/episode/6pwcw6jLrCeQeGARGU5tMI?si=8c1bfb029d204211"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 eaoLEW draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 fOKHtb draft--hr"><hr class="hr__Hr-sc-1afmttx-2 fZvsEE"></pre></div>
 <h2 class="draft-block draft--h2" name="header-4k4n9">帝國曙光：四版</h2>
 <div class="draft-block draft--p left">號稱「玩帝國曙光，看明天曙光」所言不虛，我們第一次玩就花了 16 個小時，高爾曾說他把這遊戲當團康遊戲，真的是如此。</div>
@@ -56,8 +53,7 @@ author: Kuan
 <div class="draft-block draft--p left">因此對玩家來說，特產是一種只有交換價值，沒有使用價值的商品。這提供玩家進行貿易的誘因，同時也降低了「軍力強國可以自足，不需要貿易」的缺點。</div>
 <div class="draft-block draft--p left">另一個特色是「條約卡」，就是國與國之間簽訂的外交協定啦，例如有一張 Kingmaker 卡，效果是給對方分數，但對方不能攻擊自己，條約強化了交涉的籌碼，也讓帝國曙光的交涉機制變得獨樹一幟，雖然每次玩完都很累，但我完全可以想像為什麼大家會喜歡這款遊戲。</div>
 <blockquote class="draft-block draft--blockquote">更多分手擂台，請移駕到我們的 Podcast 聆聽</blockquote>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://open.spotify.com/episode/4JLN5SkKutSr6hcjQS8RPz?si=7ac4aa9c34f447c9"></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/episode/4JLN5SkKutSr6hcjQS8RPz?si=7ac4aa9c34f447c9"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 eaoLEW draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 fOKHtb draft--hr"><hr class="hr__Hr-sc-1afmttx-2 fZvsEE"></pre></div>
 <h2 class="draft-block draft--h2" name="header-2ifa9">東印度公司：二版</h2>
 <div class="draft-block draft--p left">東印度公司是這個清單裡面最不一樣的遊戲，因為在名義上，玩家們確實都是同一國的（甚至是同事），玩家扮演英國的權貴家族，試圖在東印度公司這台龐大的企業機器裡撈錢，俗話說：「能混就混，能撈就撈」。</div>
@@ -77,5 +73,3 @@ author: Kuan
 <div class="draft-block draft--p left">我們上次玩的時候，初期大家都堅持要讓公司永續經營，貨出去、人進來、公司發大財。但到了後期，局勢就會逐漸分裂成兩派，因為利益來源的不同，會有支持公司存活的人，也一定會有希望公司倒閉的人，東印度公司最大的背叛，就是昔日一起打拼的夥伴，卻成為商場上的敵人、公司裡的米蟲，真是令人不勝唏噓啊 ⋯⋯</div>
 <div class="draft-block draft--p left">我會把東印度公司形容成一款歷史主題的 RPG 遊戲，因為在這款遊戲裡，太多東西都透過機率決定，難以預測局勢，當成策略遊戲來玩，肯定會氣死，但如果你能融入這個職場模擬器（？）或是歷史背景的氛圍裡，我相信你會很享受這個遊戲的。</div>
 <div class="draft-block draft--p left">今天就分享到這裡，莫名發現我們大多都講過 Podcast？其實最喜歡血流成河的根本就是我們嗎 ⋯⋯  也歡迎大家你分享你最愛的交涉遊戲，或是被背刺的經驗 🥲。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
