--- a/_posts/2020-04-10-VOCUS-被霸凌是犯罪-當作浮雲-文字+音檔.html
+++ b/_posts/2020-04-10-VOCUS-被霸凌是犯罪-當作浮雲-文字+音檔.html
@@ -35,10 +35,7 @@ author: 王大明
 <h2 class="draft-block draft--h2" name="header-c0ch8">第二個故事</h2>
 <div class="draft-block draft--p left">今天最後一個故事，我們來講「網路霸凌」。判決日期2020年2月24日，它是一個智慧財產法院的民事判決。</div>
 <div class="draft-block draft--p left">在板橋有一個建案叫「夢享家」。有一位A女士，在Facebook建立「板橋重劃預售討論」群組、「板橋重劃預售/ 夢享家」fb社團與粉絲頁。以及官網<a href="http://dream-house.com.tw/" target="_blank" class="draft--a">「夢享家房屋推薦網</a>」，與各預售建案及代銷公司合作，以廣告刊登、個案分析及諮詢方式，賺取費用。<br><br>另外，A女士還註冊了一個「<a href="https://twtmsearch.tipo.gov.tw/SS0/SS0201.jsp?showType=2&amp;caseNo=XpJ13RyT4SGVyS3RCM0ZydFNSeDhldmVtT1F3QT09&amp;caseType=1&amp;l6=zh_TW&amp;isReadBulletinen_US=&amp;isReadBulletinzh_TW=true" target="_blank" class="draft--a">夢享家及圖</a>」的商標。</div>
-<div><h3><a href="https://www.facebook.com/%E6%9D%BF%E6%A9%8B%E9%87%8D%E5%8A%83%E9%A0%90%E5%94%AE%E5%A4%A2%E4%BA%AB%E5%AE%B6-316420308766925/"></div>
-<div class="draft-block draft--p left"><br>然後有一個林女士，以暱稱「江北編」經營Facebook「板橋江翠北側重劃區」群組、「江北編」公開粉絲頁，其經營模式與A女士相同，會員重疊性高而具競爭關係。</div>
-<div><h3><a href="https://www.facebook.com/jiangpei.newsletter/"></div>
-<div class="draft-block draft--p left"></div>
+<div><h3><a href="https://www.facebook.com/jiangpei.newsletter/">然後有一個林女士，以暱稱「江北編」經營Facebook「板橋江翠北側重劃區」>群組、「江北編」公開粉絲頁，其經營模式與A女士相同，會員重疊性高而具競爭關係。</a></h3></div>
 <h3 class="draft-block draft--h3" name="header-cta4a">A女士（原告）的說法是：</h3>
 <ol>
   <li class="draft-block draft--li">林女士未經A女士的同意或授權，於2019年3月間自行拍攝「夢享家獨家來源」的圖片放在網路上；</li>
@@ -73,6 +70,4 @@ author: 王大明
 <div class="draft-block draft--p left">這是一審判決，可以理解成A女士（原告）全部敗訴，訴訟費用由A女士全部負擔。<span style="text-decoration: line-through; ">關於這個判決看起來沒有人上訴</span>。</div>
 <div class="draft-block draft--p left">（6月29日補充：有留言表示，當事人有另提起刑事上訴。<br>如果當事人好言提醒，我不介意修改文字更進一步去識別化。）</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">這故事告訴我們， 如果在網路霸凌，例如：你在自己的網路空間diss了對方。 <br><br>但是你並沒有指名道姓，甚至在客觀上看不出來你diss了誰。 對方就算告上法院，可能也告不贏。</div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left">（10月4日補充：在2020年9月22日，有一個刑事判決<a href="https://bit.ly/2EShGvX" target="_blank" class="draft--a">。</a><br>說林女士犯誹謗罪、公然侮辱罪。拘役35天，易科罰金一天一千元。<br>所以簡單講，林女士在自己的網路空間diss了A女士，<br>雖然她不用賠給A女士一毛錢、也不用跟A女士道歉。<br>但是她必須付給國家35000元，換來自己的自由。<br>而且她至少在未來的五年之內，良民證上是會有一個犯罪記錄的。<br><br>A女士求償100萬，最後林女士付國家35000元。<br>這個結果坦白講，對受害者A女士沒幫助，也不影響本來的民事判決<a href="https://bit.ly/2SjNgG8" target="_blank" class="draft--a">。</a><br>但是至少有給林女士一個懲罰。<br>A女士在心裡的感覺上，我猜想多少是有些彌補。<br><br>我將這個故事放入podcast，歡迎有興趣的朋友當作延伸閱讀。）</div>
-<div><h3><a href="https://player.soundon.fm/p/fe8ef76a-abb2-450e-b80b-4725251ea474/episodes/91861cdb-5a33-40dd-a22e-ceb713ff2244"></div>
+<div class="draft-block draft--p left">（10月4日補充：<a href="https://bit.ly/2EShGvX" target="_blank" class="draft--a">在2020年9月22日，有一個刑事判決。</a><br>說林女士犯誹謗罪、公然侮辱罪。拘役35天，易科罰金一天一千元。<br>所以簡單講，林女士在自己的網路空間diss了A女士，<br>雖然她不用賠給A女士一毛錢、也不用跟A女士道歉。<br>但是她必須付給國家35000元，換來自己的自由。<br>而且她至少在未來的五年之內，良民證上是會有一個犯罪記錄的。<br><br>A女士求償100萬，最後林女士付國家35000元。<br><a href="https://bit.ly/2SjNgG8" target="_blank" class="draft--a">這個結果坦白講，對受害者A女士沒幫助，也不影響本來的民事判決。</a><br>但是至少有給林女士一個懲罰。<br>A女士在心裡的感覺上，我猜想多少是有些彌補。<br><br><a href="https://player.soundon.fm/p/fe8ef76a-abb2-450e-b80b-4725251ea474/episodes/91861cdb-5a33-40dd-a22e-ceb713ff2244">我將這個故事放入podcast，歡迎有興趣的朋友當作延伸閱讀。）</div>
