--- a/_posts/2020-04-21-VOCUS-告公司還能領工資.html
+++ b/_posts/2020-04-21-VOCUS-告公司還能領工資.html
@@ -10,11 +10,8 @@ author: 王大明
 
 <div class="draft-block draft--p left">今年1月1日，「<a href="https://law.moj.gov.tw/LawClass/LawAll.aspx?pcode=B0010064" target="_blank" class="draft--a">勞動事件法</a>」正式上路，標榜「<a href="https://db.lawbank.com.tw/FLAW/FLAWDOC01.aspx?lsid=FL090074&amp;lno=1" target="_blank" class="draft--a">保障勞資雙方地位實質平等</a>」。</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=isN9_CeeK-0" class="video-screen" src="https://www.youtube.com/embed/isN9_CeeK-0" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">趕在上路第一天，空服員工會、美光工會理事長馮澤源、佳福工會遭解僱的14名會員，就分別赴桃園地院與台北地院，空服員工會告的是<a href="https://law.moj.gov.tw/LawClass/LawSingle.aspx?pcode=B0010064&amp;flno=40" target="_blank" class="draft--a">《勞動事件法》40條的「不作為之訴」</a>，馮澤源與佳福工會則聲請保全程序裡的<a href="https://law.moj.gov.tw/LawClass/LawSingle.aspx?pcode=B0010064&amp;flno=46" target="_blank" class="draft--a">定暫時狀態處分</a>。</div>
 <div class="draft-block draft--p left">最近剛好看到空服員工會、美光工會，這兩件案子都有上新聞。<br>所以今天分享一下，這些「<a href="https://www.eventsinfocus.org/news/3534" target="_blank" class="draft--a">指標案件</a>」的故事。</div>
-<div><h3><a href="https://www.eventsinfocus.org/news/3534"></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-d8hmf">什麼是「勞動事件法」</h2>
 <div class="draft-block draft--p left">在講故事以前，先簡單講一下勞動事件法。<br>勞動專業的律師整理歸納，勞動事件處理法有「<a href="https://www.mol.gov.tw/media/5761513/no60-%E6%A8%82%E8%AA%AA%E9%A0%AD%E6%A2%9D-%E5%8B%9E%E5%8B%95%E4%BA%8B%E4%BB%B6%E6%B3%95%E9%87%8D%E8%A6%81%E7%AB%8B%E6%B3%95%E5%85%A7%E5%AE%B9.pdf" target="_blank" class="draft--a">7大重點特色</a>」</div>
 <ol>
@@ -28,7 +25,6 @@ author: 王大明
 </ol>
 <div class="draft-block draft--p left">（參考資料：<a href="https://www.mol.gov.tw/media/5761513/no60-%E6%A8%82%E8%AA%AA%E9%A0%AD%E6%A2%9D-%E5%8B%9E%E5%8B%95%E4%BA%8B%E4%BB%B6%E6%B3%95%E9%87%8D%E8%A6%81%E7%AB%8B%E6%B3%95%E5%85%A7%E5%AE%B9.pdf" target="_blank" class="draft--a">吳俊達律師，勞動事件法重要立法內容</a>）</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=jplG4dx8RKA" class="video-screen" src="https://www.youtube.com/embed/jplG4dx8RKA" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-6nr73">「勞動事件法」有什麼用</h2>
 <div class="draft-block draft--p left">我們用幾個案例來描述一下，為什麼要有「勞動事件法」？</div>
 <h3 class="draft-block draft--h3" name="header-8h49u">1.求職者被納入勞工</h3>
@@ -49,47 +45,34 @@ author: 王大明
 </ul>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">若獲准許，可以回復原職繼續上班領薪水，一邊進行訴訟。</span></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">白話講，你可以一邊告公司，一邊留原地工作。</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">（參考資料：<a href="https://www.businesstoday.com.tw/article/category/80407/post/201910070032/%E5%89%9B%E5%9C%A8%E5%8F%B0%E5%8C%97%E8%B2%B7%E6%88%BF%EF%BC%8C%E5%8D%BB%E8%A2%AB%E8%AA%BF%E5%8E%BB%E6%A1%83%E5%9C%92%E4%B8%8A%E7%8F%AD%EF%BC%9F%E6%98%8E%E5%B9%B4%E5%8B%9E%E4%BA%8B%E6%B3%95%E4%B8%8A%E8%B7%AF%EF%BC%8C%E4%BD%A0%E5%8F%AF%E4%BB%A5%E4%B8%80%E9%82%8A%E5%91%8A%E5%85%AC%E5%8F%B8%EF%BC%8C%E4%B8%80%E9%82%8A%E7%95%99%E5%8E%9F%E5%9C%B0%E5%B7%A5%E4%BD%9C" target="_blank" class="draft--a">剛在台北買房，卻被調去桃園上班？明年勞事法上路，你可以一邊告公司，一邊留原地工作</a>）</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=qHkDUPELqDI" class="video-screen" src="https://www.youtube.com/embed/qHkDUPELqDI" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-5t14">聽不懂理論啦！你可以講真實案例嗎？</h2>
 <div class="draft-block draft--p left">我不是來上課的，所以不在這裡繼續介紹勞動事件法。<br>接下來就講講故事，我們一開始提到的，空服員工會跟美光工會的故事。</div>
-<div><h3><a href="https://www.facebook.com/taipeilabornews/photos/q%E5%8B%9E%E5%8B%95%E4%BA%8B%E4%BB%B6%E6%B3%95%E6%96%BD%E8%A1%8C%E5%BE%8C%E6%B3%95%E9%99%A2%E8%AA%BF%E8%A7%A3%E8%88%87%E8%A1%8C%E6%94%BF%E8%AA%BF%E8%A7%A3%E6%9C%89%E4%BD%95%E5%8D%80%E5%88%A5a1%E7%94%B3%E8%AB%8B%E8%B2%BB%E7%94%A8%E6%B3%95%E9%99%A2%E8%AA%BF%E8%A7%A3%E4%BE%9D%E6%B0%91%E4%BA%8B%E8%A8%B4%E8%A8%9F%E6%B3%95%E7%9B%B8%E9%97%9C%E8%A6%8F%E5%AE%9A%E6%94%B6%E8%B2%BB%E8%A1%8C%E6%94%BF%E8%AA%BF%E8%A7%A3%E7%84%A1%E9%A0%88%E6%94%B6%E8%B2%BB2%E5%8B%9E%E5%8B%95%E8%AA%BF%E8%A7%A3%E5%A7%94%E5%93%A1%E4%B9%8B%E7%B5%84%E6%88%90%E6%B3%95%E9%99%A2%E8%AA%BF%E8%A7%A3%E5%8B%9E%E5%8B%95%E6%B3%95%E5%BA%AD%E4%B9%8B%E6%B3%95%E5%AE%98%E4%B8%80%E4%BA%BA%E5%8F%8A%E5%8B%9E%E5%8B%95%E8%AA%BF%E8%A7%A3/1508579799308252/"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-1dorh">一、罷工空服員優待機票恢復</h3>
 <div class="draft-block draft--p left">2020年4月13日有一個新聞：<a href="https://ec.ltn.com.tw/article/breakingnews/3132460" target="_blank" class="draft--a">勞動事件法後桃園首件調解成立案，罷工空服員優待機票恢復</a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">它的故事是這樣的：</span></div>
 <div class="draft-block draft--p left">2019年2月，華航機師罷工才剛落幕，近榮航空服員又因為與公司間的勞資爭議調解不成立，開始醞釀罷工。</div>
 <div class="draft-block draft--p left">桃園市空服員職業工會在5月13日開始展開「罷工」投票，並強調將設下雙門檻（即：同意票達全體會員總數50%，且需80%長榮空服員會員同意），以避免由華航空服員決定長榮是否罷工。</div>
 <div class="draft-block draft--p left">長榮公司則展開大規模輿論戰反擊。除了質疑罷工投票不合法，又大動作發表聲明公告罷工將導致公司獲利下滑甚至虧損，因此將暫停年終和調薪，且要在三年內停止員工優惠票福利，火藥意味濃厚。</div>
-<div><h3><a href="https://www.thenewslens.com/article/118602"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.thenewslens.com/article/118602">https://www.thenewslens.com/article/118602</a></div>
 <div class="draft-block draft--p left">2019年6月7日，長榮分會3,276名空服員中，有高達九成、2,949人投下罷工同意票，超過工會自設的八成門檻；包括華航在內的全體會員也有4,038票投下贊成罷工，超越法定的過半門檻，工會確定取得罷工權。</div>
-<div><h3><a href="https://www.coolloud.org.tw/node/93018"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.coolloud.org.tw/node/93018">https://www.coolloud.org.tw/node/93018</a></div>
 <div class="draft-block draft--p left">2019年6月20日下午4點，工會宣告開始罷工。<br>長榮公司並沒有什麼讓步，因應罷工危機提出了「三不公告」：<br><br><span style="font-weight: bold; ">暫停年終獎金、年度調薪、停止優待票。</span></div>
-<div><h3><a href="https://news.cts.com.tw/cts/society/201907/201907021966162.html"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://news.cts.com.tw/cts/society/201907/201907021966162.html">https://news.cts.com.tw/cts/society/201907/201907021966162.html</a></div>
 <div class="draft-block draft--p left">2019年7月6日勞資雙方下午2點於桃園市政府，進行投票接受長榮6大方案後，第3次正式協商。下午5點50分雙方正式簽定團體協約。</div>
 <div class="draft-block draft--p left">2019年7月9日晚間24點，罷工正式結束。</div>
 <div class="draft-block draft--p left">（參考資料：<a href="https://news.ltn.com.tw/news/life/breakingnews/2844879" target="_blank" class="draft--a">從取得協商權、罷工到落幕 長榮空服員罷工大事紀</a>）</div>
-<div><h3><a href="https://news.ltn.com.tw/news/life/breakingnews/2844879"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">請問：<br>長榮公司「停止優待票」政策，是不是「不當勞動行為」？</div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">勞動部裁決下來，認為它是「不當勞動行為」。<br></span><br>長榮航空的解釋是：（節錄）</div>
 <blockquote class="draft-block draft--blockquote">優待票不該成為不當勞裁之標的，亦不該是工會破壞勞資和諧的手段。長榮航空再次強調，5月8日的公告是公司告知全體員工一旦發生罷工時的應變措施，公司給予員工獎勵措施應屬公司治理的一部分，提供員工的各項福利也應該有依營運狀況作調整的權利，這是法律賦予公司的自主管理權，不應成為不當勞動裁決的標的…此決議無法讓人信服。</blockquote>
-<div><h3><a href="https://www.thenewslens.com/article/126121"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.thenewslens.com/article/126121">https://www.thenewslens.com/article/126121</a></div>
 <div class="draft-block draft--p left">時間到了2020年4月15日，勞動部仍然認定長榮航空去年罷工期間不給優待票屬於不當勞動行為，<span style="font-weight: bold; ">長榮航空表示，深感遺憾，將提行政訴訟。</span></div>
-<div><h3><a href="https://money.udn.com/money/story/5612/4494412"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://money.udn.com/money/story/5612/4494412">https://money.udn.com/money/story/5612/4494412</a></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">是在哈囉！勞工不在乎你有沒有遺憾好嗎。<br>請問「公司什麼時候可以恢復優待機票」？</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">於是，桃園市空服員職業工會在2020年1月1日，勞動事件法施行第一天，到桃園地院遞狀，以工會為原告，對長榮航空公司提起不作為之訴。<br>工會主張：<span style="text-decoration: underline; ">長榮航空公司不得對2019年6月20日參與罷工的會員為差別待遇。</span><br><br><span style="font-weight: bold; ">2020年4月13日，經桃園地院勞動調解委員會調解成立。</span></div>
 <div class="draft-block draft--p left">說真的，我看過司法院的新聞稿。並沒有白紙黑字寫「什麼時候恢復優待機票」。</div>
-<div><h3><a href="https://www.judicial.gov.tw/tw/cp-1888-196925-30730-1.html"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.judicial.gov.tw/tw/cp-1888-196925-30730-1.html">https://www.judicial.gov.tw/tw/cp-1888-196925-30730-1.html</a></div>
 <div class="draft-block draft--p left">原文是：（節錄。聲請人是工會，相對人是長榮航空）</div>
 <blockquote class="draft-block draft--blockquote">就聲請人曾參與民國108 年6 月20日至同年7 月9 日止罷工之會員，有關使用「長榮優待機票（ID）及「立榮國內線優待機票(ID）」，自110年1月1日，起不受相對人108年5月8日航人字第B2019－0090號公告、同年7月8日航人字第B2019－0150號公告之限制。</blockquote>
 <div class="draft-block draft--p left">另外，就是在公司的「長榮航空國際航線員工優待機票福利辦法」改了幾個字：</div>
@@ -104,16 +87,13 @@ author: 王大明
 <div class="draft-block draft--p left">故事大意是，<br>美光工會理事長馮澤源於2017年間，遭台灣美光晶圓科技公司解雇。<br>他於2020年1月1日「勞動事件法」上路首日，向桃園地方法院聲請保全程序「定暫時狀態處分」。<br><span style="font-weight: bold; ">桃園地院於2020年2月12日裁定駁回。</span><br><br>馮澤源與桃園市產業總工會秘書長葉瑾瑜等人，在3月25日到司法院前舉行記者會，表示本案是<span style="text-decoration: underline; ">勞動事件法上路第一案判決結果，法院採取相對保守的態度，恐讓勞工質疑勞動事件法的效果有限</span>。</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">真的假的？</div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">當初發生了什麼事？</span><br>在2017年11月14日，美光公司本來要進行勞資協商，但在協商前夕，美光工會理事長竟被公司解雇，而且被要求不得參與協商。<br><br>工會在隔天（15日）招開記者會痛批，這明顯是「非法解雇，殺雞儆猴」。<br><br><span style="font-weight: bold; ">為什麼要解僱馮澤源？<br></span>美光公司表示因理事長不當帶外人進入公司而解雇。</div>
-<div><h3><a href="https://www.thenewslens.com/article/83565"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.thenewslens.com/article/83565">https://www.thenewslens.com/article/83565</a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">工會的說法是，<br></span>工會與公司之間因為「入廠」而產生爭議已不是第一次，在2017年的2月，就因為公司阻擋工會秘書進入工會會所處理會務而申請勞動部裁決。<br>因為如此，工會在與公司2017年6月份第三次團體協約時，公司就曾答應工會如果臨時申請入廠可以直接連絡公司的人資窗口。<br>這一次除了10月26日之外，公司也於10月19日工會要與其他友會交流時，阻擋其他友會進入。</div>
 <blockquote class="draft-block draft--blockquote">這一系列的入廠爭議，工會已經申請不當勞動行為裁決。<br>想不到，公司仍然堅持解雇理事長。況且，公司的手冊內，根本沒有規範有關公司入廠的罰則，解雇懲處過當，顯然這樣的解雇是針對工會而來。</blockquote>
-<div><h3><a href="https://www.coolloud.org.tw/node/89620"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.coolloud.org.tw/node/89620">https://www.coolloud.org.tw/node/89620</a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">請求確認勞動契約不存在<br></span>很有趣的，這件事情有提訴訟：「請求確認勞動契約不存在」。<br>是的，<span style="text-decoration: underline; ">公司向法院提告員工馮澤源，請求確認雙方的勞動契約不存在</span>。<br><br>判決日期2020年3月27日，<a href="https://law.judicial.gov.tw/FJUD/data.aspx?ty=JD&amp;id=TYDV,107%2c%e9%87%8d%e5%8b%9e%e8%a8%b4%2c8%2c20200327%2c2" target="_blank" class="draft--a">臺灣桃園地方法院 107 年重勞訴字第 8 號民事判決</a>。</div>
 <div class="draft-block draft--p left">從判決書的內容，可以看出2017年11月14日，「團體協約會議」的場面很火爆：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">馮澤源先生在會議室內，對美光公司的法務主管大聲咆哮，摔擲筆記本、朝人丟擲水瓶。最後造成同仁潘小姐左胸壁挫傷，這個行為在勞動基準法第12條，叫作「實施暴行」。</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">法院認為，這顯然是馮澤源先生針對個人遭解僱的事情表達不滿、情緒宣洩，與一般的工會活動無關。</div>
 <div class="draft-block draft--p left">也就是說，馮澤源先生被解僱了兩次，</div>
 <ol>
@@ -121,10 +101,7 @@ author: 王大明
   <li class="draft-block draft--li">下午的解僱，不是。</li>
 </ol>
 <div class="draft-block draft--quotesSpecial center"><div class="content">下午的狀況，顯然就是暴力行為</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">所以馮澤源先生如果因為遭美光解僱，跟法院聲請「定暫時狀態處分」，<a href="https://www.eventsinfocus.org/news/3534" target="_blank" class="draft--a">法院也要整體來判斷</a>。</div>
 <div class="draft-block draft--p left">最後的結果就是我剛剛說的，馮澤源先生於2020年1月1日「勞動事件法」上路首日，向桃園地方法院聲請保全程序「定暫時狀態處分」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">桃園地院於2020年2月12日裁定駁回。</span></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=grcGtq8T3fE" class="video-screen" src="https://www.youtube.com/embed/grcGtq8T3fE" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
