--- a/_posts/2023-06-04-INMEDIA-六四34-大學生持北島詩集-行街-向內地客講解.html
+++ b/_posts/2023-06-04-INMEDIA-六四34-大學生持北島詩集-行街-向內地客講解.html
@@ -20,7 +20,15 @@ author: 獨媒報導
 <p>李先生向《獨媒》表示口罩「焗都要戴，周圍好多菌」，又指自己三年來皆作如此裝扮，原因為「靚」，並反問記者「香港自由㗎嘛，唔係嘅咩？」他自然免不過被警員截查，但稱「感受到香港個溫暖，至少十個人圍住我，我覺得好安全」，警員態度「好好，好客氣。我哋咁辛苦納稅，值得嘅。」</p>
 <p>李先生表示今日是到維園參與「家鄉市集嘉年華」，「開心香港。我去完之後覺得開心咗。」李先生最終被警員指阻止其他人行街，懷疑有煽動行為，要求他離開。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/v4v8TJwB89" title="IMG_7015"><img src="https://live.staticflickr.com/65535/52949416721_bdb41b015e_b.jpg" width="1024" alt="IMG_7015" /></a></p>
+<p><strong>有市民維園讀《5月35日》劇本</strong></p>
+<p>不過維園仍有不少未被帶走的市民，在公園內一角靜靜以自己方式悼念。在往來天后至銅鑼灣的通道，大批警員不斷反覆巡邏。通道旁的座椅上，有人在Youtube重溫六四晚會的歌曲之一《自由花》，有人讀著《5月35日》的舊版劇本書，亦有人亮起手機燈。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7yun5um67e" title="IMG_6155"><img src="https://live.staticflickr.com/65535/52950563658_7879663640_c.jpg" width="800" alt="IMG_6155" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7RY4Wvx8V4" title="IMG_6156"><img src="https://live.staticflickr.com/65535/52950508610_602833e78f_c.jpg" width="800" alt="IMG_6156" /></a></p>
+<p>讀劇的曾女士身穿黑衫黑褲、戴黑口罩，頸上掛有十字架。她本身為基督徒，過往每年六四皆會到場祈禱，惟現在無法再為事件發聲，「佢唔畀我點蠟燭，我無點呀，但我喺度睇一本關於六四嘅書。」</p>
+<p>曾女士慨嘆六四事件死難者家屬無法發聲，「佢唔可以公開為自己嘅仔女做啲嘢，然之後好似呢套戲入面咁樣講，話我想為嗰個仔女去點一支蠟燭都唔得，要剝削咗我嘅權利。」一邊讀劇，她亦一邊思考香港目前的狀況「諗返究竟對我哋……姐係香港同六四事件有咩相同或者我哋可以參考嘅地方。」「好似蒲公英咁，將啲嘢散咗開去，喺世界各地到做。」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/z7g1CVnFk6" title="IMG_6157"><img src="https://live.staticflickr.com/65535/52950509875_6b56b02b35_c.jpg" width="800" alt="IMG_6157" /></a></p>
 <p>今年18歲、剛考完DSE的Ethan亦特意身穿黑衣到銅鑼灣，望為死者「發聲、悼念」。他指與家人政見不同，自己是從網上和朋友得知關於六四的訊息，首次參與六四集會已是最後一次合法集會（2019年）Ethan坦言，2019年社會事件令他覺醒，望為所有爭取自由的人發聲，雖然不少朋友因擔心而未有到來，而他看到很多人被拉上警車也會感到擔心，但認為「世界上少咗一個人發聲，就少咗一個自由。」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/EhJb11B6v3" title="Ethan"><img src="https://live.staticflickr.com/65535/52950896269_4a41de7a75_c.jpg" width="800" alt="Ethan" /></a></p>
 <p>今年是維園連續第四年沒有「合法」燭光晚會。2020年，維園晚會被當局以疫情為由被禁，是香港六四晚會歷史上首次不獲批，但當日仍有大量市民進入足球場悼念。2021年及2022年，當局則引用《公安條例》在六四前夕圍封維園。今年6月4日的維園，則由多個同鄉組織租用作舉行市集。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4x2ghFTWhi" title="IMG_6141"><img src="https://live.staticflickr.com/65535/52949918464_c4daf9d662_b.jpg" alt="IMG_6141" /></a></p>
 </div></div></div>
