--- a/_posts/2023-06-05-INMEDIA-六四34-麥燕庭稱被騙上警車-批警方手法無賴.html
+++ b/_posts/2023-06-05-INMEDIA-六四34-麥燕庭稱被騙上警車-批警方手法無賴.html
@@ -10,6 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/202306051.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>昨日是六四事件34周年，警方全日重兵在銅鑼灣及維園一帶佈防，巡邏及截查市民，又將部分人帶到警署，包括正在採訪的記協前主席麥燕庭。她今早在電台節目指，本來被指示前往封鎖區搜身後放行，但最後被帶上警車，她感覺被騙；她被扣留至晚上11點後才獲釋，認為警方目的是阻礙她採訪。她在警署扣查期間，發現大部分被帶走的市民，只是穿著了沒有口號的黑衫，有一家四口吃完生日飯並途經銅鑼灣，疑因穿黑衫即被全家帶返警署。麥燕庭批評警方做法離譜，「做嘢光明正大，大家有規有矩唔好玩陰招，如果真係唔想人悼念，就講明唔准悼念，唔准著黑色衫」。</p>
 <p>警方昨晚發稿稱，以涉嫌破壞社會安寧帶走23人，並以「妨礙警務人員執行職務」拘捕1人。</p>
+<p><strong>【更新 18:45】被捕女子已獲准保釋候查，須於7月上旬向警方報到。</strong></p>
 <p><strong>表明記者身份仍被帶走</strong></p>
 <p>被帶走的23人當中包括麥燕庭，她今早在商台《在晴朗的一天出發》憶述事件，她當日以外媒記者身份工作，站在銅鑼灣東角道警方豎立的帳蓬附近觀察，期間有警方「傳媒聯絡」人員曾與她對答，一直相安無事。惟突然有一批警員要求她進入「封鎖區」搜身。麥燕庭問警員因何事搜身，對方稱「懷疑」，即使麥燕庭表明身份對方也不理會。</p>
 <p>隨後有兩批警員先後警告她，若再不合作就告她「阻差辦工」，麥燕庭要求警方「傳媒聯絡」協作調停，但「傳媒聯絡」反叫她配合警方搜身，稱若搜身後無發現便可獲放行。當時她基於「唔好阻住我做你嘢」，配合警方行動，但她發現被帶往警車，她知道上警車意味將被帶離現場，「我好討厭，上警車係另一回事」。有男警喝令她「你唔上，我就抬你上」，她雖然感到被騙和憤怒，但亦無奈登上警車。</p>
