--- a/_posts/2023-06-04-PQ-非成員國印度在g7中角色-對俄橋樑-抗衡中國-經濟潛力.html
+++ b/_posts/2023-06-04-PQ-非成員國印度在g7中角色-對俄橋樑-抗衡中國-經濟潛力.html
@@ -10,15 +10,15 @@ author: 艾格姆
 
 <p>烏克蘭總統澤倫斯基出席在日本廣島的 G7 峰會，期間澤倫斯基跟同樣受邀參加峰會的印度總理莫迪面談，澤倫斯基邀請印度加入烏克蘭的和平方案。由於新德里和莫斯科幾十年來一直保持著密切的關係，印度拒絕就烏克蘭戰爭譴責俄羅斯。因此兩人的互動也格外引人著目。</p>
 <p>The post <a href="https://pourquoi.tw/intlnews-indo-pacific-230605-2/">非成員國印度在G7中角色：對俄橋樑、抗衡中國、經濟潛力</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
-										<p>烏克蘭總統澤倫斯基出席在日本廣島的 G7 峰會，期間澤倫斯基跟同樣受邀參加峰會的印度總理莫迪面談，澤倫斯基邀請印度加入烏克蘭的和平方案。由於新德里和莫斯科幾十年來一直保持著密切的關係，印度拒絕就烏克蘭戰爭譴責俄羅斯。因此兩人的互動也格外引人著目。</p>
+										<p>烏克蘭總統澤倫斯基出席在日本廣島的 G7 峰會，期間澤倫斯基跟同樣受邀參加峰會的印度總理莫迪面談，澤倫斯基邀請印度加入烏克蘭的和平方案。由於<strong>新德里和莫斯科幾十年來一直保持著密切的關係</strong>，印度拒絕就烏克蘭戰爭譴責俄羅斯。因此兩人的互動也格外引人著目。</p>
 
 
 
-<p>澤倫斯基表示，這是自 2022 年 2 月俄羅斯入侵烏克蘭以來首次跟莫迪面對面會談，兩人還討論到烏克蘭在流動醫院和清除地雷方面的需求。莫迪告訴澤倫斯基，他很樂意提供幫助，對他來說，戰爭是人性和人類價值觀的問題，他說：「我向你們保證，印度和我個人將竭盡全力解決問題。」</p>
+<p>澤倫斯基表示，這是自 2022 年 2 月俄羅斯入侵烏克蘭以來首次跟莫迪面對面會談，兩人還討論到烏克蘭在流動醫院和清除地雷方面的需求。<strong>莫迪告訴澤倫斯基，他很樂意提供幫助</strong>，對他來說，戰爭是人性和人類價值觀的問題，他說：「我向你們保證，印度和我個人將竭盡全力解決問題。」</p>
 
 
 
-<p>不過，印度跟俄羅斯在過去幾十年一直關係密切，印度也未譴責俄羅斯入侵烏克蘭，而且新德里跟莫斯科的貿易額還升至歷史新高，這主要是由於印度增加了對俄羅斯石油的進口。印度外交部次長卡瓦特拉（Vinay Kwatra）在莫迪跟澤倫斯基會談後表示，兩人的討論沒有涉及印度向俄羅斯購買燃料的議題。新德里表示，購買俄羅斯石油是為了捍衛自己的利益。有趣的是，澤倫斯基還在會談期間邀請莫迪訪問烏克蘭。</p>
+<p>不過，印度跟俄羅斯在過去幾十年一直關係密切，<strong>印度也未譴責俄羅斯入侵烏克蘭，而且新德里跟莫斯科的貿易額還升至歷史新高，這主要是由於印度增加了對俄羅斯石油的進口</strong>。印度外交部次長卡瓦特拉（Vinay Kwatra）在莫迪跟澤倫斯基會談後表示，兩人的討論沒有涉及印度向俄羅斯購買燃料的議題。新德里表示，購買俄羅斯石油是為了捍衛自己的利益。有趣的是，澤倫斯基還在會談期間邀請莫迪訪問烏克蘭。</p>
 
 
 
@@ -26,27 +26,27 @@ author: 艾格姆
 
 
 
-<p>另一方面，跟烏克蘭一樣，印度也非 G7 的成員國。但是，能受邀參與 G7 有利於印度推動多邊參與。對 G7 而言，則是出於多種原因，與印度接觸勢在必行。首先，印度的 GDP 為 2.66 兆美元，經濟規模超過 G7 成員國法國、義大利和加拿大。根據國際貨幣基金的數據，印度是世界上成長最快的經濟體之一，預計 2023～2024 年將成長 5.9%。世界銀行表示，印度的成長率在七個最大的新興市場和發展中經濟體中是最高的。</p>
+<p>另一方面，跟烏克蘭一樣，印度也非 G7 的成員國。但是，能受邀參與 G7 有利於印度推動多邊參與。對 G7 而言，則是出於多種原因，<strong>與印度接觸勢在必行</strong>。首先，<strong>印度的 GDP 為 2.66 兆美元，經濟規模超過 G7 成員國法國、義大利和加拿大</strong>。根據國際貨幣基金的數據，印度是世界上成長最快的經濟體之一，預計 2023～2024 年將成長 5.9%。世界銀行表示，印度的成長率在七個最大的新興市場和發展中經濟體中是最高的。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931-1024x683.jpg" alt="" class="wp-image-138686" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931.jpg 1440w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>印度總理莫迪與其他非G7集團領導人參觀廣島和平紀念公園<br>圖／Ministry of Foreign Affairs of Japan</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931-1024x683.jpg" alt="" class="wp-image-138686" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/65951775-tk101931.jpg 1440w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>印度總理莫迪與其他非G7集團領導人參觀廣島和平紀念公園<br>圖／Ministry of Foreign Affairs of Japan</figcaption></figure></div>
 
 
 
-<p>印度的經濟成長跟西方國家形成鮮明對比，西方國家現今大多面臨成長停滯的前景。國際貨幣基金（IMF）亞太部門代理主任古德－沃爾夫（Anne-Marie Gulde-Wolf）表示，印度可能成為一個關鍵的經濟引擎，能夠透過消費、投資和貿易推動全球成長。作為世界主要經濟體中的異類，由於市場潛力、製造成本低、商業改革和有利的工業環境等因素，印度仍然是一個有吸引力的投資標的。此外，最近印度超過中國成為世界上人口最多的國家。印度有 68% 的人口是勞動年齡（15～64 歲）和 65% 的人口年齡在 35 歲以下，印度提供了一支年輕且大量熟練和半熟練的勞動力。 </p>
+<p>印度的經濟成長跟西方國家形成鮮明對比，西方國家現今大多面臨成長停滯的前景。<strong>國際貨幣基金（IMF）亞太部門代理主任古德－沃爾夫（Anne-Marie Gulde-Wolf）</strong>表示，<strong>印度可能成為一個關鍵的經濟引擎，能夠透過消費、投資和貿易推動全球成長</strong>。作為世界主要經濟體中的異類，由於市場潛力、製造成本低、商業改革和有利的工業環境等因素，印度仍然是一個有吸引力的投資標的。此外，最近<strong>印度超過中國成為世界上人口最多的國家</strong>。印度有 <strong>68% 的人口是勞動年齡（15～64 歲</strong>）和 <strong>65% 的人口年齡在 35 歲以下</strong>，印度提供了一支年輕且大量熟練和半熟練的勞動力。 </p>
 
 
 
-<p>其次，跟美國和日本一樣，歐洲國家正在積極接觸印太地區。G7 的歐洲成員國英國、法國和德國都已經制定了自己的印太戰略，義大利也展現出參與印太事務的興趣。隨著全球地緣政治和經濟中心向印太轉移，歐洲國家渴望從印太地區提供的經濟機遇中獲益。然而，隨著好戰的中國擴大戰略和經濟存在感，印太地區也面臨著自身的挑戰。對於西方國家來說，印度已成為遏制中國的主要戰略夥伴，特別是在印太地區的印度洋部分。在 G7 成員中，印度已跟美國、英國、法國、德國和日本有戰略夥伴關係。而印度跟義大利在戰略領域的關係也迅速擴大中。</p>
+<p>其次，跟美國和日本一樣，歐洲國家正在積極接觸印太地區。G7 的歐洲成員國英國、法國和德國都已經制定了自己的印太戰略，義大利也展現出參與印太事務的興趣。隨著<strong>全球地緣政治和經濟中心向印太轉移</strong>，歐洲國家渴望從印太地區提供的經濟機遇中獲益。然而，隨著好戰的中國擴大戰略和經濟存在感，印太地區也面臨著自身的挑戰。<strong>對於西方國家來說，印度已成為遏制中國的主要戰略夥伴</strong>，特別是在印太地區的<strong>印度洋</strong>部分。在 G7 成員中，印度已跟美國、英國、法國、德國和日本有戰略夥伴關係。而印度跟義大利在戰略領域的關係也迅速擴大中。</p>
 
 
 
-<p class="pqnote">第三是印度意外成為解決俄烏戰爭引發的歐洲能源危機的過境國。戰爭開始前，歐洲從俄羅斯獲得了大約 40% 的石油和天然氣供應。歐洲國家在過去一年中減少了從俄羅斯的能源採購，從而陷入了能源危機。就俄羅斯而言，它以折扣價向印度提供石油，以彌補因歐洲國家減少從俄羅斯進口石油而造成的損失。由於以折扣價確保能源供應，印度增加了從俄羅斯購買的石油量。俄羅斯已成為印度最大的石油供應國。然而，歐洲國家也從印度從俄羅斯購買石油中受益。印度已經成為歐洲國家購買俄羅斯石油的後門。對俄羅斯石油的禁令導致歐洲國家在確保能源供應方面更加依賴印度。俄羅斯原油在印度經過精煉後進入歐洲，這也讓<strong>印度在今年 4 月已成為歐洲最大的精煉燃料供應國。</strong>這樣的發展確保印度在一定程度上間接減輕了歐洲經濟的負擔。</p>
+<p class="pqnote">第三是<strong>印度</strong>意外成為解決<strong>俄烏戰爭</strong>引發的<strong>歐洲能源危機的過境國</strong>。戰爭開始前，歐洲從俄羅斯獲得了大約 40% 的石油和天然氣供應。歐洲國家在過去一年中減少了從俄羅斯的能源採購，從而陷入了能源危機。就俄羅斯而言，它以折扣價向印度提供石油，以彌補因歐洲國家減少從俄羅斯進口石油而造成的損失。由於以折扣價確保能源供應，印度增加了從俄羅斯購買的石油量。<strong>俄羅斯已成為印度最大的石油供應國</strong>。然而，歐洲國家也從印度從俄羅斯購買石油中受益。<strong>印度已經成為歐洲國家購買俄羅斯石油的後門</strong>。對俄羅斯石油的禁令導致歐洲國家在確保能源供應方面更加依賴印度。俄羅斯原油在印度經過精煉後進入歐洲，這也讓<strong>印度在今年 4 月已成為歐洲最大的精煉燃料供應國。</strong>這樣的發展確保印度在一定程度上間接減輕了歐洲經濟的負擔。</p>
 
 
 
-<p>第四，印度是世界上為數不多跟俄羅斯和西方都保持友好關係的國家之一。烏克蘭戰爭已持續一年多，仍未有結束的跡象。當下的局勢仍屬僵局。在西方國家繼續向烏克蘭提供武器的同時，莫斯科也在加緊對基輔的打擊。這場戰爭已經擾亂了許多西方國家的經濟和供應鏈。印度可以透過直接或間接的調解，在不久的將來為交戰雙方提供一個台階。如果有任何對話和外交手段結束戰爭的可能性，印度的角色可能會很重要。&nbsp;</p>
+<p>第四，<strong>印度是世界上為數不多跟俄羅斯和西方都保持友好關係的國家之一</strong>。烏克蘭戰爭已持續一年多，仍未有結束的跡象。當下的局勢仍屬僵局。在西方國家繼續向烏克蘭提供武器的同時，莫斯科也在加緊對基輔的打擊。這場戰爭已經擾亂了許多西方國家的經濟和供應鏈。印度可以透過直接或間接的調解，在不久的將來為交戰雙方提供一個台階。<strong>如果有任何對話和外交手段結束戰爭的可能性，印度的角色可能會很重要</strong>。 </p>
 
 
 
@@ -54,7 +54,7 @@ author: 艾格姆
 
 
 
-<p>對於 G7 來說，儘管仍然具有影響力，但它在全球經濟中的份量已從 1980 年代的約 70% 下降到今天的 44%，這意味著如果沒有更廣泛的國際社會的支持，它對俄羅斯施壓的空間是有限的。而針對日本在 G7 中的角色，東京慶應義塾大學經濟學教授白井さゆり（Sayuri Shirai）說：「岸田首相希望更接近全球南方國家（the Global South），因為目前 G7 對俄羅斯和中國的態度有些孤立。許多發展中和新興經濟體，由於它們透過自然資源或經濟跟俄羅斯、中國的聯繫更加緊密，因此對於加入 G7 領軍的聯盟非常謹慎。南方國家很重要，因為他們的市場比例正在成長，他們的 GDP 比例（基於購買力平價，purchasing power parity）超過 50%，與此同時，日本正在老齡化，人口正在下降。」</p>
+<p>對於 G7 來說，儘管仍然具有影響力，但它在全球經濟中的份量已從 1980 年代的約 70% 下降到今天的 44%，這意味著如果沒有更廣泛的國際社會的支持，它對俄羅斯施壓的空間是有限的。而針對日本在 G7 中的角色，東京慶應義塾大學經濟學教授白井さゆり（Sayuri Shirai）說：「岸田首相希望更接近<strong>全球南方國家（the Global South）</strong>，因為目前 G7 對俄羅斯和中國的態度有些孤立。許多發展中和新興經濟體，由於它們透過自然資源或經濟跟俄羅斯、中國的聯繫更加緊密，因此對於加入 G7 領軍的聯盟非常謹慎。南方國家很重要，因為他們的市場比例正在成長，他們的 GDP 比例（基於購買力平價，purchasing power parity）超過 50%，與此同時，日本正在老齡化，人口正在下降。」</p>
 
 
 
