--- a/_posts/2023-06-05-INMEDIA-門外蠟燭掛畫被警收走-西多-陳嘉琳-香港變成一個點樣嘅地方.html
+++ b/_posts/2023-06-05-INMEDIA-門外蠟燭掛畫被警收走-西多-陳嘉琳-香港變成一個點樣嘅地方.html
@@ -8,15 +8,15 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202306056%E6%8B%B7%E8%B2%9D.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>昨日是六四事件34週年，前西貢區議員陳嘉琳等開辦的西貢士多「西多」，今（5日）凌晨在門外掛上黑色底的蠟燭掛畫，早上被警方拆除收走。陳嘉琳向《獨媒》表示對此感到驚訝，稱警方在沒有通知的情況下，在私人地方收走私人物品，「香港宜家到底變成咗一個點樣嘅地方？」她指，警方貼在閘外的告示沒有說明沒收原因，僅稱可以致電查詢，「咁即係點呀？要我打返電話去了解發生咩事？我完全唔明個執法logic 」。</p>
+<img src="https://www.inmediahk.net/files/column_images/202306056%E6%8B%B7%E8%B2%9D.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>昨日是六四事件34週年，由前西貢區議員陳嘉琳等開辦的西貢士多「西多」，今（5日）凌晨其門外出現黑色底的蠟燭掛畫，早上被警方拆除收走。陳嘉琳向《獨媒》表示對此感到驚訝，稱警方在沒有通知的情況下，在私人地方收走私人物品，「香港宜家到底變成咗一個點樣嘅地方？」她指，警方貼在閘外的告示沒有說明沒收原因，僅稱可以致電查詢，「咁即係點呀？要我打返電話去了解發生咩事？我完全唔明個執法logic 」。</p>
 <p><strong>警今早登門拆掛畫 留下告示稱可致電查詢</strong></p>
 <p>位於西貢普通道32號的「西多」在Facebook專頁表示，今早收到街坊報料，發現有數名警員在「西多」門外，拆除掛在閘外的蠟燭掛畫，並留下一張告示。告示稱，就警方今早移除黑色掛畫，特此通知，如有查詢可向西貢警處聯絡。帖文指，「西多自己門口，私人地方，點解可以咁樣拆！？」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/029Qpv8U4G" title="351465231_109834022119345_5690875859876013507_n"><img src="https://live.staticflickr.com/65535/52951878991_3660783033_b.jpg" width="1024" alt="351465231_109834022119345_5690875859876013507_n" /></a><br /><em>「西多」Facebook 圖片</em></p>
-<p>陳嘉琳向《獨媒》表示，在今日凌晨12時掛上蠟燭掛畫，早上就收到不少街坊報料，指約早上7時，「西多」門外有4至5名警員拆除閘外的掛畫，並放入透明膠袋收走，過程歷時20分鐘。</p>
+<p>陳嘉琳向《獨媒》引述街坊指，約早上7時，「西多」門外有4至5名警員拆除閘外的掛畫，並放入透明膠袋收走，過程歷時20分鐘。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/52952330403/in/album-72177720308836368/" title="351333048_270174738831517_271420213291894961_n"><img src="https://live.staticflickr.com/65535/52952330403_2f07cb4e91_b.jpg" alt="351333048_270174738831517_271420213291894961_n" /></a><br /><em>「西多」約在今日凌晨12時掛畫 （「西多」Facebook 圖片）</em></p>
 <p><strong>警無說明原因 陳嘉琳：我完全唔明個執法logic</strong></p>
 <p>對於掛畫被警方收走，陳嘉琳稱感到「幾surprise」，「因為私人地方、私人物品，喺無通知我嘅情況底下，仲要喺清晨間舖無人嘅情況之下，咁樣做呢件事，香港宜家到底變成咗一個點樣嘅地方？」她指，該張告示沒有說明掛畫被收走的原因及干犯甚麼法例，「食環收咗你㗎單車都會話你聽係阻街，咁佢（警方） 無，淨係話有興趣就聯絡我哋，咁即係點呀？要我打返電話去了解發生咩事？我完全唔明個執法logic 」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/e0p7fK3g7r" title="351330739_1031458834485314_1866713796913845527_n"><img src="https://live.staticflickr.com/65535/52952258655_015583a05e_b.jpg" /></a><br /><em>「西多」Facebook 圖片</em></p>
-<p>「西多」自5月23日起向市民派發蠟燭後，遭屋宇署、食環署、勞工處及警方連番<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E5%89%8D%E5%8D%80%E8%AD%B0%E5%93%A1%E5%A3%AB%E5%A4%9A%E7%A8%B1%E6%B4%BE%E8%A0%9F%E7%87%AD%E5%BE%8C-%E6%94%BF%E5%BA%9C%E9%83%A8%E9%96%80%E9%80%A3%E7%95%AA%E5%B7%A1%E6%9F%A5">巡查</a>，店外及後長期有警車駐守。陳嘉琳表示不會詢問警方拿回掛畫，不想再與警方周旋，「呢幾日已經煩㗎啦⋯⋯當佢偷咗我啲嘢，我留返張notice 囉」。</p>
+<p>「西多」自5月23日起向市民派發蠟燭後，遭屋宇署、食環署、勞工處及警方連番<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E5%89%8D%E5%8D%80%E8%AD%B0%E5%93%A1%E5%A3%AB%E5%A4%9A%E7%A8%B1%E6%B4%BE%E8%A0%9F%E7%87%AD%E5%BE%8C-%E6%94%BF%E5%BA%9C%E9%83%A8%E9%96%80%E9%80%A3%E7%95%AA%E5%B7%A1%E6%9F%A5">巡查</a>，店外及後長期有警車駐守。陳嘉琳表示不會詢問警方拿回掛畫，亦不想再與警方周旋，「呢幾日已經煩㗎啦⋯⋯當佢偷咗我啲嘢，我留返張notice 囉」。</p>
 <p>《獨媒》正向警方查詢。</p>
 </div></div></div>
